<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".NewLessonActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton3"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/alpha"
            android:contentDescription="@string/back"
            android:onClick="back"
            android:scaleX="2"
            android:scaleY="2"
            app:srcCompat="@drawable/back_icon"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5" />

    </LinearLayout>

    <EditText
        android:id="@+id/start_time"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:autofillHints=""
        android:background="@color/alpha"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/start_time"
        android:inputType="time"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/end_time"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:autofillHints=""
        android:background="@color/alpha"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/end_time"
        android:inputType="time"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/mondayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="@color/alpha"
        android:button="@null"
        android:drawableEnd="@drawable/image_checkbox"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
        android:text="@string/Monday"
        android:textAlignment="center"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/tuesdayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="@color/alpha"
        android:button="@null"
        android:drawableEnd="@drawable/image_checkbox"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
        android:text="@string/Tuesday"
        android:textAlignment="center"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/wednesdayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="@color/alpha"
        android:button="@null"
        android:drawableEnd="@drawable/image_checkbox"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
        android:text="@string/Wednesday"
        android:textAlignment="center"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/thursdayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="@color/alpha"
        android:button="@null"
        android:drawableEnd="@drawable/image_checkbox"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
        android:text="@string/Thursday"
        android:textAlignment="center"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/fridayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="@color/alpha"
        android:button="@null"
        android:drawableEnd="@drawable/image_checkbox"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
        android:text="@string/Friday"
        android:textAlignment="center"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/saturdayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="@color/alpha"
        android:button="@null"
        android:drawableEnd="@drawable/image_checkbox"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
        android:text="@string/Saturday"
        android:textAlignment="center"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/sundayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="@color/alpha"
        android:button="@null"
        android:drawableEnd="@drawable/image_checkbox"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
        android:text="@string/Sunday"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="@color/alpha"
        android:fontFamily="casual"
        android:onClick="add"
        android:text="@string/add"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="InefficientWeight,UsingOnClickInXml" />

</LinearLayout>