<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#00FFFFFF"
            android:contentDescription="@string/settings"
            android:onClick="onSettingsPress"
            android:scaleX="2"
            android:scaleY="2"
            app:srcCompat="@drawable/settings_icon"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            tools:ignore="NestedWeights" />


        <TextView
            android:id="@+id/timeOfLesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingStart="30dp"
            android:text="@string/time_of_lesson"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <TextView
            android:id="@+id/timeOfWorkday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingStart="30dp"
            android:text="@string/time_of_workday"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <TextView
            android:id="@+id/timeOfDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingStart="30dp"
            android:text="@string/time_of_day"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            tools:ignore="RtlCompat,RtlSymmetry" />


    </LinearLayout>

</LinearLayout>